# publish_python_test

./: .gitignore  .release-please-config.json  CHANGELOG.md  README.md  pyproject.toml  workspace.code-workspace
.github/workflows/: release-please.yml
packaging/: publish_python.spec
scripts/: build_exe.ps1
src/publish_python/: __init__.py  application_service.py  main.py  message_factory.py  tkinter_infrastructure.py  view_model.py  window_layout.py
tests/: __init__.py
tests/e2e/: __init__.py  test_main.py  test_release_please_configuration.py
tests/integration/: __init__.py  test_release_please_workflow.py  test_tkinter_infrastructure.py
tests/unit/: __init__.py  test_release_please_manifest.py  test_window_layout.py
