[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "publish-python"
version = "0.4.0"
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
build = [
    "pyinstaller>=6.14.1",
]

[project.scripts]
hello-gui = "publish_python.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
